test/files/neg/bug585.check
bug585.scala:1: error: unterminated comment
/*
^
one error found
